--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
+    "@mui/x-date-pickers": "^7.27.1",
     "@toolpad/core": "^0.12.0",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
