--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,3 +1,10 @@
 node_modules
 .vercel
 echo "dist/"
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
