--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 APP_TOKEN_KEY=appTokenKey
 APP_URI=https://react-web-dashboard.up.railway.app
+MONGO_URI=mongodb+srv://pobicasauldev:<UqBKjFYplmSVFldZ>@react-web-dashboard-clu.yb6hs.mongodb.net/?retryWrites=true&w=majority&appName=react-web-dashboard-cluster
