--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,14 @@
     "@toolpad/core": "^0.12.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
