add node environment variable

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 APP_TOKEN_KEY=appTokenKey
 APP_URI=https://react-web-dashboard.up.railway.app
+NODE_ENV=production
 MONGO_URI=mongodb+srv://pobicasauldev:<UqBKjFYplmSVFldZ>@react-web-dashboard-clu.yb6hs.mongodb.net/?retryWrites=true&w=majority&appName=react-web-dashboard-cluster
