--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,1 @@
-# VITE_API_URI=https://react-web-dashboard.up.railway.app/api
-VITE_API_URI=http://localhost:5000/api
+VITE_API_URI=https://react-web-dashboard.up.railway.app/api
